# cjm-fasthtml-virtual-collection

./: README.md  demo_app.py  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_virtual_collection/: _modidx.py
cjm_fasthtml_virtual_collection/components/: collection.py  footer.py  scrollbar.py  table.py
cjm_fasthtml_virtual_collection/core/: button_ids.py  html_ids.py  models.py  windowing.py
cjm_fasthtml_virtual_collection/js/: auto_fit.py  scroll.py  scrollbar.py  touch.py
cjm_fasthtml_virtual_collection/keyboard/: actions.py
cjm_fasthtml_virtual_collection/routes/: handlers.py  router.py
components/: collection.html  collection.html.md  footer.html  footer.html.md  scrollbar.html  scrollbar.html.md  table.html  table.html.md
core/: button_ids.html  button_ids.html.md  html_ids.html  html_ids.html.md  models.html  models.html.md  windowing.html  windowing.html.md
demos/: constrained_container.py  delete_items.py  skippable.py
js/: auto_fit.html  auto_fit.html.md  scroll.html  scroll.html.md  scrollbar.html  scrollbar.html.md  touch.html  touch.html.md
keyboard/: actions.html  actions.html.md
nbs/: index.ipynb  nbdev.yml
nbs/components/: collection.ipynb  footer.ipynb  scrollbar.ipynb  table.ipynb
nbs/core/: button_ids.ipynb  html_ids.ipynb  models.ipynb  windowing.ipynb
nbs/js/: auto_fit.ipynb  scroll.ipynb  scrollbar.ipynb  touch.ipynb
nbs/keyboard/: actions.ipynb
nbs/routes/: handlers.ipynb  router.ipynb
routes/: handlers.html  handlers.html.md  router.html  router.html.md
