[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-virtual-collection"
dynamic = ["version"]
description = "FastHTML virtualized collection rendering with discrete navigation, custom scrollbar, table layout, and cell-level HTMX updates."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-fasthtml-app-core', 'cjm-fasthtml-tailwind', 'cjm-fasthtml-daisyui', 'cjm_fasthtml_lucide_icons', 'cjm-fasthtml-keyboard-navigation', 'cjm-fasthtml-viewport-fit', 'cjm_fasthtml_virtual_scrollbar>=0.0.11', 'cjm_fasthtml_design_system>=0.0.5']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-virtual-collection"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-virtual-collection"

[project.entry-points.nbdev]
cjm_fasthtml_virtual_collection = "cjm_fasthtml_virtual_collection._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_virtual_collection.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_virtual_collection"]

[tool.nbdev]
