[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-virtual-collection"
dynamic = ["version"]
description = "FastHTML virtualized collection rendering with discrete navigation, custom scrollbar, table layout, and cell-level HTMX updates."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml', 'cjm-fasthtml-app-core>=0.0.20', 'cjm-fasthtml-tailwind>=0.0.44', 'cjm-fasthtml-daisyui>=0.0.15', 'cjm_fasthtml_lucide_icons>=0.0.1', 'cjm-fasthtml-keyboard-navigation>=0.0.25', 'cjm-fasthtml-viewport-fit>=0.0.14', 'cjm_fasthtml_virtual_scrollbar>=0.0.15', 'cjm_fasthtml_design_system>=0.0.12']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-virtual-collection"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-virtual-collection"

[project.entry-points.nbdev]
cjm_fasthtml_virtual_collection = "cjm_fasthtml_virtual_collection._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_virtual_collection.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_virtual_collection*"]

[tool.nbdev]
